--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
     <link rel="stylesheet" href="style.css"> </head>
 
 <body>
-    <table class="table table stripped">
+    <table class="table" cellspacing="0" cellpadding="0">
         <tbody class="data">
-
+            <tr>
+                <th>IP adress </th>
+                <th>First Name </th>
+                <th>Last Name </th>
+                <th>E-mail </th>
+                <th>IP cím</th>
+            </tr>
         </tbody>
     </table>
 </body>
-<script type=" text/javascript " src="json.js " charset="utf-8 "></script>
+<script type="text/javascript " src="json.js " charset="utf-8 "></script>
 
 </html>
